form with email address

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <br>
   Last name:<br>
   <input type="text" name="lastname" value="Mouse">
+  <br>
+  E-mail:<br>
+  <input type="email" name="emailaddress">
   <br><br>
   <input type="submit" value="Submit">
 </form> 
