--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ body {font-size:16px;}
         <label>Message</label>
         <input class="w3-input w3-border" type="text" name="Message" required>
       </div>
-      <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send Message</button>
+      <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onsubmit="return formsubmit">Send Message</button>
     </form>  
   </div>
 
@@ -197,6 +197,15 @@ body {font-size:16px;}
 function myFunction() {
   alert("Send Message");
 }
+  function formSubmit(){
+ var userValues = {
+ "Email":" w3-input w3-border",
+ "Message":" w3-input w3-border ",
+ "Name":" w3-input w3-border"};
+ window.FMApi = window.FMApi || [];
+ window.FMApi.push("fm_form_tracking", "B7C8D08AFC8F824A3D7C23F65AF47D07B3947EE7D20A3999A37FB83719AFC47117BE32AFEED0365D52FF0A8A2FEED6738D80E5FA454E39447617CD956F68136F", userValues);
+}
+</script>
 
 <script>
 // Script to open and close sidebar
