--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ body {font-size:16px;}
         <label>Message</label>
         <input class="w3-input w3-border" type="text" name="Message" required>
       </div>
-      <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom"> Send Message</button>
+      <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" id="Submit"> Send Message</button>
     </form>  
   </div>
 
@@ -205,6 +205,11 @@ function myFunction() {
  window.FMApi = window.FMApi || [];
  window.FMApi.push("fm_form_tracking", "B7C8D08AFC8F824A3D7C23F65AF47D07B3947EE7D20A3999A37FB83719AFC47117BE32AFEED0365D52FF0A8A2FEED6738D80E5FA454E39447617CD956F68136F", userValues);
 }
+ $( document ).ready(function() {
+    $( "#Submit" ).click(function( event ) {
+if(window.FM && typeof window.FM.identify === "function") {
+FM.identify(home.EMAIL_ID);
+}}} 
 </script>
 
 <script>
